gccida/c2/output_constant_def_contents
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:3897:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:3949:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:3953:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_const; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:3982:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:3986:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:3990:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_data; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant_def_contents/src/obj/varasm.o] Error 1
